fix source impor mixins

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,5 +1,5 @@
-@import '../abstracts/variables';
-@import '../abstracts/mixins';
+@import '/stylesabstracts/variables';
+@import '/styles/abstracts/mixins';
 
 .footer{
   display: flex;
