--- a/styles/components/_directions.scss
+++ b/styles/components/_directions.scss
@@ -1,5 +1,5 @@
-@import '../abstracts/variables';
-@import '../abstracts/mixins';
+@import '/styles/abstracts/variables';
+@import '/styles/abstracts/mixins';
 .directions{
   position: relative;
   display: flex;
