--- a/styles/components/_feedback.scss
+++ b/styles/components/_feedback.scss
@@ -1,5 +1,5 @@
-@import '../abstracts/variables';
-@import '../abstracts/mixins';
+@import '/styles/abstracts/variables';
+@import '/styles/abstracts/mixins';
 .feedback{
   display: flex;
   flex-direction: column;
