--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,5 +1,5 @@
-@import '/stylesabstracts/variables';
-@import '/styles/abstracts/mixins';
+@import './styles/abstracts/variables';
+@import './styles/abstracts/mixins';
 
 .footer{
   display: flex;
