--- a/styles/components/_mobile-menu.scss
+++ b/styles/components/_mobile-menu.scss
@@ -1,5 +1,5 @@
-@import '/styles/abstracts/variables';
-@import '/styles/abstracts/mixins';
+@import './styles/abstracts/variables';
+@import './styles/abstracts/mixins';
 
 .header-menu{
   position: sticky;
